classDiagram

namespace pkg_validations {
class Validation 
class Message 
}
RealisationProjet "1" --> "*" Validation
Validation "*" --> "1" TransfertCompetence
Validation "*" --> "1" Appreciation
Validation "1" --> "1 " Message

namespace pkg_competences {
  class Competence 
  class Appreciation
}

namespace pkg_creation_projets {
  class Projet 
  %% par défaut il faut ajouter deux livrable : Code, Présentation
  class TransfertCompetence
}

Projet "1" --> "*" TransfertCompetence
TransfertCompetence "*" -- "1" Competence 
TransfertCompetence "*" -- "1" Appreciation

namespace pkg_realisation_projets {
  class RealisationProjet
}
Projet "1" -- "*" RealisationProjet

class Validation {
  id : int
  note : float
}

class Message {
  id: int
  titre: string
  description: text
}